// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioDocumentCitation renders  component with a mock espace record 1`] = `
<AudioDocumentCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [
        Object {
          "rek_alternate_genre": "453663",
          "rek_alternate_genre_id": 19123,
          "rek_alternate_genre_lookup": "Conversation",
          "rek_alternate_genre_order": 1,
          "rek_alternate_genre_pid": "UQ:151787",
          "rek_alternate_genre_xsdmf_id": 16955,
        },
      ],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Shutter, Leigh",
          "rek_author_id": 29123821,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "Arthurs, Andy",
          "rek_author_id": 29123822,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "Bamford, Greg",
          "rek_author_id": 29123823,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "McColl, Mary Rose",
          "rek_author_id": 29123824,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "Skinner, Peter R.",
          "rek_author_id": 29123825,
          "rek_author_order": 5,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 28491062,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 28491063,
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 486,
          "rek_author_id_id": 28491064,
          "rek_author_id_order": 3,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 28491065,
          "rek_author_id_order": 4,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 146,
          "rek_author_id_id": 28491066,
          "rek_author_id_order": 5,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": Object {
        "rek_date_recorded": "1963-10-17T00:00:00Z",
        "rek_date_recorded_id": 18812,
        "rek_date_recorded_pid": "UQ:151787",
        "rek_date_recorded_xsdmf_id": 16638,
      },
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": null,
      "fez_record_search_key_edition": null,
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:3804",
          "rek_ismemberof_id": 11644074,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:161208",
          "rek_ismemberof_id": 11644075,
          "rek_ismemberof_order": 2,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:152266",
          "rek_ismemberof_id": 11644076,
          "rek_ismemberof_order": 3,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:12837",
          "rek_ismemberof_id": 11644077,
          "rek_ismemberof_order": 4,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [
        Object {
          "rek_language": "eng",
          "rek_language_id": 5283977,
          "rek_language_order": 1,
          "rek_language_pid": "UQ:151787",
          "rek_language_xsdmf_id": 9541,
        },
      ],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": Object {
        "rek_license": 453611,
        "rek_license_id": 22340,
        "rek_license_lookup": "Creative Commons Attribution noncommercial no derivatives",
        "rek_license_pid": "UQ:362394",
        "rek_license_xsdmf_id": 16636,
      },
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": null,
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "Centre for Subtropical Design, Queensland University of Technology",
        "rek_publisher_id": 4489060,
        "rek_publisher_pid": "UQ:151787",
        "rek_publisher_xsdmf_id": 9540,
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": "453638",
        "rek_refereed_source_id": 1252323,
        "rek_refereed_source_pid": "UQ:151787",
        "rek_refereed_source_xsdmf_id": 16623,
      },
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": "some series value",
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [
        Object {
          "rek_subject": 310199,
          "rek_subject_id": 9196765,
          "rek_subject_order": 1,
          "rek_subject_pid": "UQ:151787",
          "rek_subject_xsdmf_id": 9526,
        },
        Object {
          "rek_subject": 450019,
          "rek_subject_id": 9196766,
          "rek_subject_order": 2,
          "rek_subject_pid": "UQ:151787",
          "rek_subject_xsdmf_id": 9526,
        },
        Object {
          "rek_subject": 450776,
          "rek_subject_id": 9196767,
          "rek_subject_order": 3,
          "rek_subject_pid": "UQ:151787",
          "rek_subject_xsdmf_id": 9526,
        },
      ],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": null,
      "fez_record_search_key_transcript": Object {
        "rek_transcript": "Researcher: Food?<br /> Participant: (Traditional Language)",
        "rek_transcript_id": 19167,
        "rek_transcript_pid": "UQ:362393",
        "rek_transcript_xsdmf_id": 16626,
      },
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Shutter, Leigh\\" href=\\"/list/author/Shutter%2C+Leigh/\\">Shutter, Leigh</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Arthurs, Andy\\" href=\\"/list/author/Arthurs%2C+Andy/\\">Arthurs, Andy</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Bamford, Greg\\" href=\\"/list/author_id/486/\\">Bamford, Greg</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for McColl, Mary Rose\\" href=\\"/list/author/McColl%2C+Mary+Rose/\\">McColl, Mary Rose</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Skinner, Peter R.\\" href=\\"/list/author_id/146/\\">Skinner, Peter R.</a> (<span class=\\"citation_date\\">2007</span>) <a class=\\"citation_title\\" title=\\"Click to view Audio Document: Hearing the city Symposium Title 5: In conversation\\" href=\\"/view/UQ:151787\\">Hearing the city Symposium Title 5: In conversation</a>.  :<span class=\\"citation_publisher\\">Centre for Subtropical Design, Queensland University of Technology</span>. ",
      "rek_copyright": "on",
      "rek_copyright_xsdmf_id": 3679,
      "rek_created_date": "2008-07-08T11:32:20Z",
      "rek_created_date_xsdmf_id": 3677,
      "rek_date": "2007-01-01T00:00:00Z",
      "rek_date_xsdmf_id": 9531,
      "rek_depositor": 298,
      "rek_depositor_affiliation": 835,
      "rek_depositor_affiliation_xsdmf_id": 11881,
      "rek_depositor_xsdmf_id": 7578,
      "rek_description": null,
      "rek_description_xsdmf_id": null,
      "rek_display_type": 263,
      "rek_display_type_lookup": "Audio Document",
      "rek_display_type_xsdmf_id": 3673,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": "CD-ROM",
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": 9532,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": 3674,
      "rek_pid": "UQ:151787",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": 1,
      "rek_status": 2,
      "rek_status_xsdmf_id": 3680,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Hearing the city Symposium Title 5: In conversation",
      "rek_title_xsdmf_id": 9543,
      "rek_updated_date": "2014-10-04T20:45:09Z",
      "rek_updated_date_xsdmf_id": 3678,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationAudio"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      idSearchKey={
        Object {
          "idKey": "fez_record_search_key_author_id",
          "idOrder": "rek_author_id_order",
          "idSubkey": "rek_author_id",
        }
      }
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [
            Object {
              "rek_alternate_genre": "453663",
              "rek_alternate_genre_id": 19123,
              "rek_alternate_genre_lookup": "Conversation",
              "rek_alternate_genre_order": 1,
              "rek_alternate_genre_pid": "UQ:151787",
              "rek_alternate_genre_xsdmf_id": 16955,
            },
          ],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Shutter, Leigh",
              "rek_author_id": 29123821,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "Arthurs, Andy",
              "rek_author_id": 29123822,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "Bamford, Greg",
              "rek_author_id": 29123823,
              "rek_author_order": 3,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "McColl, Mary Rose",
              "rek_author_id": 29123824,
              "rek_author_order": 4,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "Skinner, Peter R.",
              "rek_author_id": 29123825,
              "rek_author_order": 5,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 28491062,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 28491063,
              "rek_author_id_order": 2,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 486,
              "rek_author_id_id": 28491064,
              "rek_author_id_order": 3,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 28491065,
              "rek_author_id_order": 4,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 146,
              "rek_author_id_id": 28491066,
              "rek_author_id_order": 5,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
          ],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": Object {
            "rek_date_recorded": "1963-10-17T00:00:00Z",
            "rek_date_recorded_id": 18812,
            "rek_date_recorded_pid": "UQ:151787",
            "rek_date_recorded_xsdmf_id": 16638,
          },
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": null,
          "fez_record_search_key_edition": null,
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:3804",
              "rek_ismemberof_id": 11644074,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:161208",
              "rek_ismemberof_id": 11644075,
              "rek_ismemberof_order": 2,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:152266",
              "rek_ismemberof_id": 11644076,
              "rek_ismemberof_order": 3,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:12837",
              "rek_ismemberof_id": 11644077,
              "rek_ismemberof_order": 4,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [
            Object {
              "rek_language": "eng",
              "rek_language_id": 5283977,
              "rek_language_order": 1,
              "rek_language_pid": "UQ:151787",
              "rek_language_xsdmf_id": 9541,
            },
          ],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": Object {
            "rek_license": 453611,
            "rek_license_id": 22340,
            "rek_license_lookup": "Creative Commons Attribution noncommercial no derivatives",
            "rek_license_pid": "UQ:362394",
            "rek_license_xsdmf_id": 16636,
          },
          "fez_record_search_key_link": Array [],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": null,
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": null,
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "Centre for Subtropical Design, Queensland University of Technology",
            "rek_publisher_id": 4489060,
            "rek_publisher_pid": "UQ:151787",
            "rek_publisher_xsdmf_id": 9540,
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": Object {
            "rek_refereed_source": "453638",
            "rek_refereed_source_id": 1252323,
            "rek_refereed_source_pid": "UQ:151787",
            "rek_refereed_source_xsdmf_id": 16623,
          },
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": "some series value",
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [
            Object {
              "rek_subject": 310199,
              "rek_subject_id": 9196765,
              "rek_subject_order": 1,
              "rek_subject_pid": "UQ:151787",
              "rek_subject_xsdmf_id": 9526,
            },
            Object {
              "rek_subject": 450019,
              "rek_subject_id": 9196766,
              "rek_subject_order": 2,
              "rek_subject_pid": "UQ:151787",
              "rek_subject_xsdmf_id": 9526,
            },
            Object {
              "rek_subject": 450776,
              "rek_subject_id": 9196767,
              "rek_subject_order": 3,
              "rek_subject_pid": "UQ:151787",
              "rek_subject_xsdmf_id": 9526,
            },
          ],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": null,
          "fez_record_search_key_transcript": Object {
            "rek_transcript": "Researcher: Food?<br /> Participant: (Traditional Language)",
            "rek_transcript_id": 19167,
            "rek_transcript_pid": "UQ:362393",
            "rek_transcript_xsdmf_id": 16626,
          },
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Shutter, Leigh\\" href=\\"/list/author/Shutter%2C+Leigh/\\">Shutter, Leigh</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Arthurs, Andy\\" href=\\"/list/author/Arthurs%2C+Andy/\\">Arthurs, Andy</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Bamford, Greg\\" href=\\"/list/author_id/486/\\">Bamford, Greg</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for McColl, Mary Rose\\" href=\\"/list/author/McColl%2C+Mary+Rose/\\">McColl, Mary Rose</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Skinner, Peter R.\\" href=\\"/list/author_id/146/\\">Skinner, Peter R.</a> (<span class=\\"citation_date\\">2007</span>) <a class=\\"citation_title\\" title=\\"Click to view Audio Document: Hearing the city Symposium Title 5: In conversation\\" href=\\"/view/UQ:151787\\">Hearing the city Symposium Title 5: In conversation</a>.  :<span class=\\"citation_publisher\\">Centre for Subtropical Design, Queensland University of Technology</span>. ",
          "rek_copyright": "on",
          "rek_copyright_xsdmf_id": 3679,
          "rek_created_date": "2008-07-08T11:32:20Z",
          "rek_created_date_xsdmf_id": 3677,
          "rek_date": "2007-01-01T00:00:00Z",
          "rek_date_xsdmf_id": 9531,
          "rek_depositor": 298,
          "rek_depositor_affiliation": 835,
          "rek_depositor_affiliation_xsdmf_id": 11881,
          "rek_depositor_xsdmf_id": 7578,
          "rek_description": null,
          "rek_description_xsdmf_id": null,
          "rek_display_type": 263,
          "rek_display_type_lookup": "Audio Document",
          "rek_display_type_xsdmf_id": 3673,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": "CD-ROM",
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": 9532,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": 3674,
          "rek_pid": "UQ:151787",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": 1,
          "rek_status": 2,
          "rek_status_xsdmf_id": 3680,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Hearing the city Symposium Title 5: In conversation",
          "rek_title_xsdmf_id": 9543,
          "rek_updated_date": "2014-10-04T20:45:09Z",
          "rek_updated_date_xsdmf_id": 3678,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      showLink={false}
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=", "
          value="Shutter, Leigh"
        >
          <span
            className="citationAuthor"
          >
            Shutter, Leigh
            , 
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_2"
          prefix=""
          suffix=", "
          value="Arthurs, Andy"
        >
          <span
            className="citationAuthor"
          >
            Arthurs, Andy
            , 
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_3"
          prefix=""
          suffix=", "
          value="Bamford, Greg"
        >
          <span
            className="citationAuthor"
          >
            Bamford, Greg
            , 
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_4"
          prefix=""
          suffix=""
          value="McColl, Mary Rose"
        >
          <span
            className="citationAuthor"
          >
            McColl, Mary Rose
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_5"
          prefix=" and "
          suffix=""
          value="Skinner, Peter R."
        >
          <span
            className="citationAuthor"
          >
             and 
            Skinner, Peter R.
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2007-01-01T00:00:00Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2007
        ).
      </span>
    </DateCitationView>
    <CitationTitleView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Hearing the city Symposium Title 5: In conversation"
    >
      <span
        className="citationTitle"
      >
         
        Hearing the city Symposium Title 5: In conversation
        .
      </span>
    </CitationTitleView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value="Centre for Subtropical Design, Queensland University of Technology"
    >
      <span
        className="citationPublisher"
      >
         
        Centre for Subtropical Design, Queensland University of Technology
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <DoiCitationView
      doi={null}
    >
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</AudioDocumentCitation>
`;

exports[`AudioDocumentCitation renders  component with an empty doi view  1`] = `
<AudioDocumentCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [
        Object {
          "rek_alternate_genre": "453663",
          "rek_alternate_genre_id": 19123,
          "rek_alternate_genre_lookup": "Conversation",
          "rek_alternate_genre_order": 1,
          "rek_alternate_genre_pid": "UQ:151787",
          "rek_alternate_genre_xsdmf_id": 16955,
        },
      ],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Shutter, Leigh",
          "rek_author_id": 29123821,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "Arthurs, Andy",
          "rek_author_id": 29123822,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "Bamford, Greg",
          "rek_author_id": 29123823,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "McColl, Mary Rose",
          "rek_author_id": 29123824,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
        Object {
          "rek_author": "Skinner, Peter R.",
          "rek_author_id": 29123825,
          "rek_author_order": 5,
          "rek_author_pid": "UQ:151787",
          "rek_author_xsdmf_id": 9514,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 28491062,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 28491063,
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 486,
          "rek_author_id_id": 28491064,
          "rek_author_id_order": 3,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 28491065,
          "rek_author_id_order": 4,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
        Object {
          "rek_author_id": 146,
          "rek_author_id_id": 28491066,
          "rek_author_id_order": 5,
          "rek_author_id_pid": "UQ:151787",
          "rek_author_id_xsdmf_id": 9509,
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": Object {
        "rek_date_recorded": "1963-10-17T00:00:00Z",
        "rek_date_recorded_id": 18812,
        "rek_date_recorded_pid": "UQ:151787",
        "rek_date_recorded_xsdmf_id": 16638,
      },
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": Object {},
      "fez_record_search_key_edition": null,
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:3804",
          "rek_ismemberof_id": 11644074,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:161208",
          "rek_ismemberof_id": 11644075,
          "rek_ismemberof_order": 2,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:152266",
          "rek_ismemberof_id": 11644076,
          "rek_ismemberof_order": 3,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:12837",
          "rek_ismemberof_id": 11644077,
          "rek_ismemberof_order": 4,
          "rek_ismemberof_pid": "UQ:151787",
          "rek_ismemberof_xsdmf_id": 149,
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [
        Object {
          "rek_language": "eng",
          "rek_language_id": 5283977,
          "rek_language_order": 1,
          "rek_language_pid": "UQ:151787",
          "rek_language_xsdmf_id": 9541,
        },
      ],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": Object {
        "rek_license": 453611,
        "rek_license_id": 22340,
        "rek_license_lookup": "Creative Commons Attribution noncommercial no derivatives",
        "rek_license_pid": "UQ:362394",
        "rek_license_xsdmf_id": 16636,
      },
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": null,
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "Centre for Subtropical Design, Queensland University of Technology",
        "rek_publisher_id": 4489060,
        "rek_publisher_pid": "UQ:151787",
        "rek_publisher_xsdmf_id": 9540,
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": "453638",
        "rek_refereed_source_id": 1252323,
        "rek_refereed_source_pid": "UQ:151787",
        "rek_refereed_source_xsdmf_id": 16623,
      },
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": "some series value",
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [
        Object {
          "rek_subject": 310199,
          "rek_subject_id": 9196765,
          "rek_subject_order": 1,
          "rek_subject_pid": "UQ:151787",
          "rek_subject_xsdmf_id": 9526,
        },
        Object {
          "rek_subject": 450019,
          "rek_subject_id": 9196766,
          "rek_subject_order": 2,
          "rek_subject_pid": "UQ:151787",
          "rek_subject_xsdmf_id": 9526,
        },
        Object {
          "rek_subject": 450776,
          "rek_subject_id": 9196767,
          "rek_subject_order": 3,
          "rek_subject_pid": "UQ:151787",
          "rek_subject_xsdmf_id": 9526,
        },
      ],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": null,
      "fez_record_search_key_transcript": Object {
        "rek_transcript": "Researcher: Food?<br /> Participant: (Traditional Language)",
        "rek_transcript_id": 19167,
        "rek_transcript_pid": "UQ:362393",
        "rek_transcript_xsdmf_id": 16626,
      },
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Shutter, Leigh\\" href=\\"/list/author/Shutter%2C+Leigh/\\">Shutter, Leigh</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Arthurs, Andy\\" href=\\"/list/author/Arthurs%2C+Andy/\\">Arthurs, Andy</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Bamford, Greg\\" href=\\"/list/author_id/486/\\">Bamford, Greg</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for McColl, Mary Rose\\" href=\\"/list/author/McColl%2C+Mary+Rose/\\">McColl, Mary Rose</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Skinner, Peter R.\\" href=\\"/list/author_id/146/\\">Skinner, Peter R.</a> (<span class=\\"citation_date\\">2007</span>) <a class=\\"citation_title\\" title=\\"Click to view Audio Document: Hearing the city Symposium Title 5: In conversation\\" href=\\"/view/UQ:151787\\">Hearing the city Symposium Title 5: In conversation</a>.  :<span class=\\"citation_publisher\\">Centre for Subtropical Design, Queensland University of Technology</span>. ",
      "rek_copyright": "on",
      "rek_copyright_xsdmf_id": 3679,
      "rek_created_date": "2008-07-08T11:32:20Z",
      "rek_created_date_xsdmf_id": 3677,
      "rek_date": "2007-01-01T00:00:00Z",
      "rek_date_xsdmf_id": 9531,
      "rek_depositor": 298,
      "rek_depositor_affiliation": 835,
      "rek_depositor_affiliation_xsdmf_id": 11881,
      "rek_depositor_xsdmf_id": 7578,
      "rek_description": null,
      "rek_description_xsdmf_id": null,
      "rek_display_type": 263,
      "rek_display_type_lookup": "Audio Document",
      "rek_display_type_xsdmf_id": 3673,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": "CD-ROM",
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": 9532,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": 3674,
      "rek_pid": "UQ:151787",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": 1,
      "rek_status": 2,
      "rek_status_xsdmf_id": 3680,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Hearing the city Symposium Title 5: In conversation",
      "rek_title_xsdmf_id": 9543,
      "rek_updated_date": "2014-10-04T20:45:09Z",
      "rek_updated_date_xsdmf_id": 3678,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationAudio"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      idSearchKey={
        Object {
          "idKey": "fez_record_search_key_author_id",
          "idOrder": "rek_author_id_order",
          "idSubkey": "rek_author_id",
        }
      }
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [
            Object {
              "rek_alternate_genre": "453663",
              "rek_alternate_genre_id": 19123,
              "rek_alternate_genre_lookup": "Conversation",
              "rek_alternate_genre_order": 1,
              "rek_alternate_genre_pid": "UQ:151787",
              "rek_alternate_genre_xsdmf_id": 16955,
            },
          ],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Shutter, Leigh",
              "rek_author_id": 29123821,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "Arthurs, Andy",
              "rek_author_id": 29123822,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "Bamford, Greg",
              "rek_author_id": 29123823,
              "rek_author_order": 3,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "McColl, Mary Rose",
              "rek_author_id": 29123824,
              "rek_author_order": 4,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
            Object {
              "rek_author": "Skinner, Peter R.",
              "rek_author_id": 29123825,
              "rek_author_order": 5,
              "rek_author_pid": "UQ:151787",
              "rek_author_xsdmf_id": 9514,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 28491062,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 28491063,
              "rek_author_id_order": 2,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 486,
              "rek_author_id_id": 28491064,
              "rek_author_id_order": 3,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 28491065,
              "rek_author_id_order": 4,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
            Object {
              "rek_author_id": 146,
              "rek_author_id_id": 28491066,
              "rek_author_id_order": 5,
              "rek_author_id_pid": "UQ:151787",
              "rek_author_id_xsdmf_id": 9509,
            },
          ],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": Object {
            "rek_date_recorded": "1963-10-17T00:00:00Z",
            "rek_date_recorded_id": 18812,
            "rek_date_recorded_pid": "UQ:151787",
            "rek_date_recorded_xsdmf_id": 16638,
          },
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": Object {},
          "fez_record_search_key_edition": null,
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:3804",
              "rek_ismemberof_id": 11644074,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:161208",
              "rek_ismemberof_id": 11644075,
              "rek_ismemberof_order": 2,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:152266",
              "rek_ismemberof_id": 11644076,
              "rek_ismemberof_order": 3,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:12837",
              "rek_ismemberof_id": 11644077,
              "rek_ismemberof_order": 4,
              "rek_ismemberof_pid": "UQ:151787",
              "rek_ismemberof_xsdmf_id": 149,
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [
            Object {
              "rek_language": "eng",
              "rek_language_id": 5283977,
              "rek_language_order": 1,
              "rek_language_pid": "UQ:151787",
              "rek_language_xsdmf_id": 9541,
            },
          ],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": Object {
            "rek_license": 453611,
            "rek_license_id": 22340,
            "rek_license_lookup": "Creative Commons Attribution noncommercial no derivatives",
            "rek_license_pid": "UQ:362394",
            "rek_license_xsdmf_id": 16636,
          },
          "fez_record_search_key_link": Array [],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": null,
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": null,
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "Centre for Subtropical Design, Queensland University of Technology",
            "rek_publisher_id": 4489060,
            "rek_publisher_pid": "UQ:151787",
            "rek_publisher_xsdmf_id": 9540,
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": Object {
            "rek_refereed_source": "453638",
            "rek_refereed_source_id": 1252323,
            "rek_refereed_source_pid": "UQ:151787",
            "rek_refereed_source_xsdmf_id": 16623,
          },
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": "some series value",
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [
            Object {
              "rek_subject": 310199,
              "rek_subject_id": 9196765,
              "rek_subject_order": 1,
              "rek_subject_pid": "UQ:151787",
              "rek_subject_xsdmf_id": 9526,
            },
            Object {
              "rek_subject": 450019,
              "rek_subject_id": 9196766,
              "rek_subject_order": 2,
              "rek_subject_pid": "UQ:151787",
              "rek_subject_xsdmf_id": 9526,
            },
            Object {
              "rek_subject": 450776,
              "rek_subject_id": 9196767,
              "rek_subject_order": 3,
              "rek_subject_pid": "UQ:151787",
              "rek_subject_xsdmf_id": 9526,
            },
          ],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": null,
          "fez_record_search_key_transcript": Object {
            "rek_transcript": "Researcher: Food?<br /> Participant: (Traditional Language)",
            "rek_transcript_id": 19167,
            "rek_transcript_pid": "UQ:362393",
            "rek_transcript_xsdmf_id": 16626,
          },
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Shutter, Leigh\\" href=\\"/list/author/Shutter%2C+Leigh/\\">Shutter, Leigh</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Arthurs, Andy\\" href=\\"/list/author/Arthurs%2C+Andy/\\">Arthurs, Andy</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Bamford, Greg\\" href=\\"/list/author_id/486/\\">Bamford, Greg</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for McColl, Mary Rose\\" href=\\"/list/author/McColl%2C+Mary+Rose/\\">McColl, Mary Rose</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Skinner, Peter R.\\" href=\\"/list/author_id/146/\\">Skinner, Peter R.</a> (<span class=\\"citation_date\\">2007</span>) <a class=\\"citation_title\\" title=\\"Click to view Audio Document: Hearing the city Symposium Title 5: In conversation\\" href=\\"/view/UQ:151787\\">Hearing the city Symposium Title 5: In conversation</a>.  :<span class=\\"citation_publisher\\">Centre for Subtropical Design, Queensland University of Technology</span>. ",
          "rek_copyright": "on",
          "rek_copyright_xsdmf_id": 3679,
          "rek_created_date": "2008-07-08T11:32:20Z",
          "rek_created_date_xsdmf_id": 3677,
          "rek_date": "2007-01-01T00:00:00Z",
          "rek_date_xsdmf_id": 9531,
          "rek_depositor": 298,
          "rek_depositor_affiliation": 835,
          "rek_depositor_affiliation_xsdmf_id": 11881,
          "rek_depositor_xsdmf_id": 7578,
          "rek_description": null,
          "rek_description_xsdmf_id": null,
          "rek_display_type": 263,
          "rek_display_type_lookup": "Audio Document",
          "rek_display_type_xsdmf_id": 3673,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": "CD-ROM",
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": 9532,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": 3674,
          "rek_pid": "UQ:151787",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": 1,
          "rek_status": 2,
          "rek_status_xsdmf_id": 3680,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Hearing the city Symposium Title 5: In conversation",
          "rek_title_xsdmf_id": 9543,
          "rek_updated_date": "2014-10-04T20:45:09Z",
          "rek_updated_date_xsdmf_id": 3678,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      showLink={false}
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=", "
          value="Shutter, Leigh"
        >
          <span
            className="citationAuthor"
          >
            Shutter, Leigh
            , 
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_2"
          prefix=""
          suffix=", "
          value="Arthurs, Andy"
        >
          <span
            className="citationAuthor"
          >
            Arthurs, Andy
            , 
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_3"
          prefix=""
          suffix=", "
          value="Bamford, Greg"
        >
          <span
            className="citationAuthor"
          >
            Bamford, Greg
            , 
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_4"
          prefix=""
          suffix=""
          value="McColl, Mary Rose"
        >
          <span
            className="citationAuthor"
          >
            McColl, Mary Rose
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_5"
          prefix=" and "
          suffix=""
          value="Skinner, Peter R."
        >
          <span
            className="citationAuthor"
          >
             and 
            Skinner, Peter R.
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2007-01-01T00:00:00Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2007
        ).
      </span>
    </DateCitationView>
    <CitationTitleView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Hearing the city Symposium Title 5: In conversation"
    >
      <span
        className="citationTitle"
      >
         
        Hearing the city Symposium Title 5: In conversation
        .
      </span>
    </CitationTitleView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value="Centre for Subtropical Design, Queensland University of Technology"
    >
      <span
        className="citationPublisher"
      >
         
        Centre for Subtropical Design, Queensland University of Technology
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <DoiCitationView>
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</AudioDocumentCitation>
`;

exports[`AudioDocumentCitation renders  component with empty publication 1`] = `
<AudioDocumentCitation
  publication={Object {}}
>
  <div
    className="citationContent citationAudio"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      idSearchKey={
        Object {
          "idKey": "fez_record_search_key_author_id",
          "idOrder": "rek_author_id_order",
          "idSubkey": "rek_author_id",
        }
      }
      initialNumberOfAuthors={10}
      publication={Object {}}
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      showLink={false}
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors empty"
      />
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate empty"
      />
    </DateCitationView>
    <CitationTitleView
      className="citationTitle"
      prefix=" "
      suffix="."
    >
      <span
        className="citationTitle empty"
      />
    </CitationTitleView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationPublisher empty"
      />
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <DoiCitationView
      doi={null}
    >
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</AudioDocumentCitation>
`;
